# camp-registration

./: README.md  pyproject.toml  run_form_builder.py  run_gui.py
camp_registration/: __init__.py  cli.py  form_builder.py  gui.py  registry.py  web_form.py
tests/: test_registry.py  test_web_form.py
